@@ -5,7 +5,7 @@ Version: 1.0-2
 Date: 2017-04-15
 Imports: doParallel, foreach, parallel, quadprog
 Suggests: crs, np, rgl
-Author: Jeffrey S. Racine
-Maintainer: <racinej@mcmaster.ca>
+Authors@R: person(given = "Jeffrey S.", family = "Racine", role = c("aut","cre"), email = "racinej@mcmaster.ca")
+Maintainer: Jeffrey S. Racine <racinej@mcmaster.ca>
 Description: This package implements model averaging using a variety of multivariate bases.
 License: GPL-2
